WindGroup Dev/src/objects/Expression_of_Interest__c.object
<CustomObject>
    <description>Created to manage Bookings</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expression of Interest</relationshipLabel>
        <relationshipName>Expression_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expression of Interest</relationshipLabel>
        <relationshipName>Expression_of_Interest</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enquiry_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Enquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <label>Lease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Name</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Expression of Interest</relationshipLabel>
        <relationshipName>Expression_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Panel</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Cash Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Digital Display</fullName>
                </value>
                <value>
                    <fullName>Promo Space</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit No.</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Units__c.Property__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Expression of Interest</relationshipLabel>
        <relationshipName>Expression_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expression of Interest</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-Int-{000000}</displayFormat>
        <label>Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>